Added styling to meata mask download

--- a/src/components/MetaMask/DownloadMetaMask/style.css
+++ b/src/components/MetaMask/DownloadMetaMask/style.css
@@ -7,5 +7,11 @@
 }
 
 .download-metaMask__image {
+  width: 664px;
   max-width: 100%;
 }
+
+.download-metaMask__image > img {
+  max-width: 100%;
+}
+
