--- a/src/components/MetaMask/style.css
+++ b/src/components/MetaMask/style.css
@@ -1,5 +1,4 @@
 .metaMask {
-  border: 1px solid red;
   padding: 16px;
   display: flex;
   flex-direction: column;
@@ -8,8 +7,9 @@
 }
 
 .metaMask-buttons {
+  width: 332px;
   display: flex;
-  gap: 24px;
+  justify-content: space-between;
 }
 
 .metaMask-image {
