--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -6,7 +6,10 @@
 
 .content {
   display: flex;
-  align-items: center;
   justify-content: center;
   flex: 1;
+}
+
+.metaMask {
+  align-items: center;
 }
