--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,3 +1,12 @@
 header {
   padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+header > img {
+  width: 50px;
+  height: 50px;
 }
