--- a/src/components/Dashboard/style.css
+++ b/src/components/Dashboard/style.css
@@ -1,10 +1,11 @@
-.dashboard {
+.dashboard,
+.dashboard__posts {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
 
-.posts {
+.dashboard__posts-list {
   display: flex;
   flex-direction: column;
   gap: 8px;
